# rpeditor

./: CMakeLists.txt  LICENSE.md  README.md  files.cmake
CMake/: FindPackages.cmake
src/: collapsible_widget.cpp  collapsible_widget.hpp  logger_manager.cpp  logger_manager.hpp  logging.cpp  logging.hpp  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  main_window_api.cpp  main_window_material_api.cpp  main_window_nodepath_api.cpp  main_window_showbase_api.cpp  restapi_client.cpp  restapi_client.hpp  restapi_message.hpp
src/restapi/: config.hpp  resolve_message.cpp  resolve_message.hpp  restapi_client.cpp  restapi_client.hpp  restapi_event.hpp  restapi_message.hpp
src/restapi/resources/: geomnode.cpp  material.cpp  nodepath.cpp  showbase.cpp  showbase.hpp
tools/: deploy-qt.bat
